<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:theme="@style/WatchAppTheme">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/about_fragment_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/list_vertical_padding">

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/image_desc_cover_image"
                android:scaleType="centerCrop"
                android:src="@drawable/cover_image"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/scrim"
                app:layout_constraintBottom_toBottomOf="@id/cover_image"
                app:layout_constraintEnd_toEndOf="@id/cover_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/cover_image"
                app:layout_constraintTop_toTopOf="@id/cover_image"
                app:layout_constraintVertical_bias="0.0" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clickable="true"
                android:contentDescription="@string/image_desc_profile_image"
                android:focusable="true"
                android:src="@drawable/profile_image"
                app:civ_border_color="@color/white"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="@id/cover_image"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.3"
                tools:elevation="3dp" />

            <TextView
                android:id="@+id/name"
                style="@style/Headline5.Black.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_8"
                android:layout_marginEnd="@dimen/spacing_16"
                android:gravity="center_horizontal"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                tools:elevation="3dp" />

            <TextView
                android:id="@+id/occupation"
                style="@style/Body2.Black.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_16"
                android:text="@string/occupation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:elevation="3dp" />

            <TextView
                android:id="@+id/location"
                style="@style/Caption.Black.Tertiary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_16"
                android:text="@string/location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/occupation"
                tools:elevation="3dp" />

            <Space
                android:id="@+id/profile_image_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="@id/profile_image" />

            <Space
                android:id="@+id/card_bottom_reference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                app:layout_constraintEnd_toEndOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@id/location" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/card_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="profile_image,occupation,name,location" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/vertical_keyline_primary"
                android:layout_marginEnd="@dimen/vertical_keyline_primary"
                app:layout_constraintBottom_toBottomOf="@id/card_bottom_reference"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/profile_image_center" />

            <com.sotti.watch.one.line.row.view.OneLineRow
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_vertical_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card"
                app:olr_icon="@drawable/ic_github_24dp"
                app:olr_text="@string/about_github_handle" />

            <com.sotti.watch.one.line.row.view.OneLineRow
                android:id="@+id/stackoverflow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/github"
                app:olr_icon="@drawable/ic_stackoverflow_24dp"
                app:olr_text="@string/about_stackoverflow_handle" />

            <com.sotti.watch.one.line.row.view.OneLineRow
                android:id="@+id/medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stackoverflow"
                app:olr_icon="@drawable/ic_medium_24dp"
                app:olr_text="@string/about_medium_handle" />

            <com.sotti.watch.one.line.row.view.OneLineRow
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medium"
                app:olr_icon="@drawable/ic_twitter_logo_24dp"
                app:olr_text="@string/about_twitter_handle" />

            <com.sotti.watch.one.line.row.view.OneLineRow
                android:id="@+id/linkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/twitter"
                app:olr_icon="@drawable/ic_linkedin_24dp"
                app:olr_text="@string/about_linkedin_handle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>